--- a/package.json
+++ b/package.json
@@ -9,10 +9,18 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo-google-fonts/karla": "^0.2.3",
+    "@expo/metro-runtime": "~3.2.1",
+    "babel-plugin-module-resolver": "^5.0.2",
     "expo": "~51.0.12",
     "expo-status-bar": "~1.12.1",
+    "nativewind": "4.0.1",
     "react": "18.2.0",
-    "react-native": "0.74.2"
+    "react-dom": "18.2.0",
+    "react-native": "0.74.2",
+    "react-native-reanimated": "~3.10.1",
+    "react-native-web": "~0.19.10",
+    "tailwindcss": "^3.4.4"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
