--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@expo-google-fonts/karla": "^0.2.3",
     "@expo/metro-runtime": "~3.2.1",
+    "@react-navigation/native-stack": "^6.9.26",
     "babel-plugin-module-resolver": "^5.0.2",
     "expo": "~51.0.12",
     "expo-status-bar": "~1.12.1",
