--- a/package.json
+++ b/package.json
@@ -11,17 +11,21 @@
   "dependencies": {
     "@expo-google-fonts/karla": "^0.2.3",
     "@expo/metro-runtime": "~3.2.1",
+    "@react-navigation/native": "^6.1.17",
     "@react-navigation/native-stack": "^6.9.26",
     "babel-plugin-module-resolver": "^5.0.2",
     "expo": "~51.0.12",
     "expo-status-bar": "~1.12.1",
     "nativewind": "4.0.1",
+    "phosphor-react-native": "^2.0.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.74.2",
     "react-native-reanimated": "~3.10.1",
     "react-native-web": "~0.19.10",
-    "tailwindcss": "^3.4.4"
+    "tailwindcss": "^3.4.4",
+    "react-native-screens": "3.31.1",
+    "react-native-safe-area-context": "4.10.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
