--- a/package.json
+++ b/package.json
@@ -16,8 +16,12 @@
     "@react-navigation/bottom-tabs": "^6.5.20",
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/native-stack": "^6.9.26",
+    "@rneui/base": "^4.0.0-rc.7",
+    "@rneui/themed": "^4.0.0-rc.8",
     "axios": "^1.7.2",
     "babel-plugin-module-resolver": "^5.0.2",
+    "clsx": "^2.1.1",
+    "crypto-js": "^4.2.0",
     "expo": "~51.0.12",
     "expo-file-system": "~17.0.1",
     "expo-image-picker": "~15.0.5",
@@ -29,15 +33,20 @@
     "react-hook-form": "^7.51.5",
     "react-native": "0.74.2",
     "react-native-reanimated": "~3.10.1",
+    "react-native-reanimated-carousel": "^3.5.1",
     "react-native-safe-area-context": "4.10.1",
     "react-native-screens": "3.31.1",
     "react-native-toast-message": "^2.2.0",
     "react-native-web": "~0.19.10",
+    "tailwind-merge": "^2.3.0",
     "tailwindcss": "^3.4.4",
-    "zod": "^3.23.8"
+    "twrnc": "^4.2.0",
+    "zod": "^3.23.8",
+    "react-native-gesture-handler": "~2.16.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
+    "@types/crypto-js": "^4.2.2",
     "@types/react": "~18.2.45",
     "typescript": "^5.1.3"
   },
