--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@expo-google-fonts/karla": "^0.2.3",
     "@expo/metro-runtime": "~3.2.1",
+    "@gorhom/bottom-sheet": "^4.6.3",
     "@hookform/resolvers": "^3.6.0",
     "@react-native-async-storage/async-storage": "1.23.1",
     "@react-navigation/bottom-tabs": "^6.5.20",
@@ -32,6 +33,8 @@
     "react-dom": "18.2.0",
     "react-hook-form": "^7.51.5",
     "react-native": "0.74.2",
+    "react-native-element-dropdown": "^2.12.0",
+    "react-native-gesture-handler": "~2.16.1",
     "react-native-reanimated": "~3.10.1",
     "react-native-reanimated-carousel": "^3.5.1",
     "react-native-safe-area-context": "4.10.1",
@@ -41,8 +44,7 @@
     "tailwind-merge": "^2.3.0",
     "tailwindcss": "^3.4.4",
     "twrnc": "^4.2.0",
-    "zod": "^3.23.8",
-    "react-native-gesture-handler": "~2.16.1"
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
